deploy/shlink-redirector/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shlink
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
