deploy/shlink-redirector/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shlink-redirector
  namespace: shlink
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: external
  tls:
    - hosts: [go.home.chrisscotmartin.com]
      secretName: shlink-redirector-tls
  rules:
    - host: go.home.chrisscotmartin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink-redirector
                port:
                  number: 80
